--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -12,3 +12,14 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.ukCard {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+}
+
+.ukTextField {
+  margin-left: 16px;
+}
