--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -1,5 +1,6 @@
 html, body {
   height: 100%;
+  background-color: red;
 }
 
 body {
@@ -18,6 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 16px;
+  background-color: red;
 }
 
 .ukTextField {
