Aligned tip text

--- a/src/app/components/tip.scss
+++ b/src/app/components/tip.scss
@@ -1,5 +1,7 @@
 .ukTip {
   margin-left: 48px;
   flex: 1 1 auto;
-  align-self: center;
+  align-self: flex-end;
+  position: relative;
+  top: -13px;
 }
