--- a/src/app/components/tip.scss
+++ b/src/app/components/tip.scss
@@ -1,7 +1,9 @@
+@import "../variables";
+
 .ukTip {
-  margin-left: 48px;
-  flex: 1 1 auto;
   align-self: flex-end;
+  flex: 1 1 auto;
+  margin-left: 6 * $baseline-grid;
   position: relative;
-  top: -13px;
+  top: -(2 * $baseline-grid);
 }
