--- a/src/app/components/flasbutton.scss
+++ b/src/app/components/flasbutton.scss
@@ -1,6 +1,6 @@
 @import "../variables";
 
 .ukFlashButton {
-  margin: 2 * $baseline-grid;
-  align-self: flex-end;
+  align-self: flex-start;
+  margin: (2 * $baseline-grid) 0;
 }
