Extract submit button

--- a/src/app/components/submitbutton/submitbutton.scss
+++ b/src/app/components/submitbutton/submitbutton.scss
@@ -1,6 +1,6 @@
-@import "../variables";
+@import "../../variables";
 
-.ukFlashButton {
+.ukSubmitButton {
   align-self: flex-start;
   margin: (2 * $baseline-grid) 0;
 }
