--- a/src/app/ubikube.scss
+++ b/src/app/ubikube.scss
@@ -27,3 +27,8 @@ html, body {
   display: flex;
   flex-direction: column;
 }
+
+.ukAdvancedButton {
+  align-self: flex-start;
+  margin-top: $baseline-grid;
+}
