Gather form data in submit function

--- a/src/app/ubikube.scss
+++ b/src/app/ubikube.scss
@@ -32,3 +32,8 @@ html, body {
   align-self: flex-start;
   margin-top: $baseline-grid;
 }
+
+.ukSubmitButton {
+  align-self: flex-start;
+  margin: (2 * $baseline-grid) 0;
+}
