--- a/src/app/ubikube.scss
+++ b/src/app/ubikube.scss
@@ -19,14 +19,8 @@ html, body {
   padding-left: 4 * $baseline-grid;
 }
 
-.ukDivider{
-    width: $baseline-grid;
-    height: auto;
-    display: inline-block;
-}
+.ukShowAdvancedButton {
 
-.ukButtons {
-  padding-top: $baseline-grid;
 }
 
 .ukCardHeader {
