--- a/src/app/components/tip/tip.scss
+++ b/src/app/components/tip/tip.scss
@@ -5,6 +5,6 @@
   flex: 1 1 auto;
   margin-left: 6 * $baseline-grid;
   position: relative;
-  top: -(2 * $baseline-grid);
+  top: -1.5 * $baseline-grid;
   width: 100%;
 }
