--- a/src/app/ubikube.scss
+++ b/src/app/ubikube.scss
@@ -16,7 +16,7 @@ html, body {
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  padding-left: 4 * $baseline-grid;
+  padding: 0 (4 * $baseline-grid);
 }
 
 .ukShowAdvancedButton {
