--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Ubikube</title>
+    <script>
+      // install babel hooks in the renderer process
+      require('babel-register');
+      require('./src/app/index');
+    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script src="app.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </body>
 </html>
