--- a/src/app/index.html
+++ b/src/app/index.html
@@ -6,7 +6,7 @@
     <script>
       // install babel hooks in the renderer process
       require('babel-register');
-      require('./src/app/index');
+      require('./index');
     </script>
   </head>
   <body>
