--- a/src/app/index.html
+++ b/src/app/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="root"></div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="../styles.css">
     <script>
       // install babel hooks in the renderer process
       require('babel-register');
