--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Ubikube</title>
-
   </head>
   <body>
     <div id="root"></div>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script>
       // install babel hooks in the renderer process
       require('babel-register');
