--- a/src/app/index.html
+++ b/src/app/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script>
-      // install babel hooks in the renderer process
+      // Install babel hooks in the renderer process.
       require('babel-register');
       require('./index');
     </script>
